# sift

./: .ocamlformat  LICENSE  README.md  dune-project  sift.opam  sift.opam.template
doc/: command-palette-next.md  model.md  roadmap.md  spec.md  spice-integration.md  ui-design.md
lib/crs/: comment.ml  comment.mli  digest.ml  digest.mli  dune  edit.ml  edit.mli  error.ml  error.mli  filter.ml  filter.mli  handle.ml  handle.mli  header.ml  header.mli  item.ml  item.mli  parser.ml  parser.mli  priority.ml  priority.mli  sift_crs.ml  sift_crs.mli  span.ml  span.mli  status.ml  status.mli  syntax.ml  syntax.mli
lib/diff/: compute.ml  compute.mli  diff.ml  diff.mli  dune  error.ml  error.mli  file.ml  file.mli  hunk.ml  hunk.mli  line.ml  line.mli  parser.ml  parser.mli  sift_diff.ml  sift_diff.mli
lib/feature/: dune  error.ml  error.mli  revision.ml  revision.mli  sift_feature.ml  sift_feature.mli  summary.ml  summary.mli
lib/git/: dune  error.ml  error.mli  sift_git.ml  sift_git.mli
lib/review/: approval.ml  approval.mli  cursor.ml  cursor.mli  dune  error.ml  error.mli  mark.ml  mark.mli  scope.ml  scope.mli  sift_review.ml  sift_review.mli  summary.ml  summary.mli
lib/runner/: dune  live_worktree.ml  live_worktree.mli  sift_runner.mli
lib/store/: codec.ml  codec.mli  dune  error.ml  error.mli  fs.ml  fs.mli  key.ml  key.mli  record.ml  record.mli  sift_store.ml  sift_store.mli  version.ml  version.mli
lib/tui/: command_palette.ml  command_palette.mli  composer.ml  composer.mli  diff_pane.ml  diff_pane.mli  diff_target.ml  diff_target.mli  dune  inspector_pane.ml  inspector_pane.mli  queue_pane.ml  queue_pane.mli  refresh_notice.ml  refresh_notice.mli  review_context.ml  review_context.mli  review_plan.ml  review_plan.mli  review_queue.ml  review_queue.mli  sift_tui.ml  sift_tui.mli  theme.ml  theme.mli
test/: dune  test_crs.ml  test_diff.ml  test_feature.ml  test_git.ml  test_review.ml  test_runner.ml  test_store.ml  test_tui.ml
